some unit tests for backend